httproute/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: default-httproute
  namespace: ingress-nginx
spec:
  parentRefs:
  - name: external-https-nginx
    namespace: ingress-nginx
    sectionName: https
  hostnames:
  - whereami.example.com
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: ingress-nginx-controller
      port: 443
